Fixed a backend bug and added a splash screen.